--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+../calceo-backend/.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -137,3 +137,4 @@ dist
 
 package-lock.json
 .idea/
+/.idea
